# vllm

./: .gitignore  CMakeLists.txt  analys_decode_attn.py  analys_dumped_attn_map.py  analys_sparse_config.py  api_server_test.sh  build_vllm.sh  flash_attn_bench.py  format_hotpot_test_case.py  profile_deepseek_qwen14b.sh  run_deepseek_qwen_14b.sh  run_deepseek_r1_distill_14b.sh  run_qwen_2_5_1M.sh  run_qwq_32b.sh  run_qwq_32b_blend.sh  run_qwq_32b_blend_prepare.sh  test_dual_chunk_rotary_embedding.py  test_h5py_read.py  test_h5py_write.py  test_l20_bandwith.py  test_reasoning_api_server.py  test_serving.sh  test_spec_decode.py  test_standalone_spec_decode.py  test_tokenizer_return_offset_mapping.py  triton_calculate_blk_similarity.py  visualize_attn_out_difference.py  visualize_qkv_diff.py  visualize_qkv_per_channel.py  visualize_qkv_sim.py  visualize_throughput.py  visualize_topk_difference.py
benchmarks/: benchmark_serving.py
benchmarks/infinite_benchmark/: args.py  eval_utils.py  infinite_benchmark.py  run_infbench.sh  run_infbench_dca.sh  run_infbench_dca_wo_sparse_attn_config.sh  run_infbench_flex_prefill.sh  run_infbench_lserve.sh  run_infbench_sparge_attn.sh  run_infbench_xattn.sh
benchmarks/math/: eval.sh  run_math.py  run_math_bench.sh  run_math_xattn.sh
benchmarks/needle_in_a_haystack/: needle_test.py  needle_tools.py  needle_viz.py  run_needle.sh  run_needle_dca_without_sparse_attention_config.sh  run_needle_flex_prefill.sh  run_needle_lserve.sh  run_needle_minference.sh  run_needle_spage_attn_enable_chunked_prefill.sh  run_needle_sparge_attn.sh
cacheblend/: blend_hotpotqa.py  blend_hotpotqa1.py  blend_prepare_hotpotqa.py  clear_data.sh  read_hdf5.py
cmake/: cpu_extension.cmake
cmake/external_projects/: flashmla.cmake  vllm_flash_attn.cmake
csrc/: ops.h  pos_encoding_kernels.cu  torch_bindings.cpp
csrc/tests/: CMakeLists.txt  test_dca_rotary_embedding.cu
examples/offline_inference/: qwen_1m.py  qwen_test_dca.py
vllm/: config.py  sequence.py  utils.py
vllm/attention/: layer.py
vllm/core/: block_manager.py  scheduler.py  sparse_index_block_manager.py
(+46 files in other folders)
